tests/integration/errors/break_outside_loop.rsg
// TEST: compile_error
// EXPECT-ERROR: 'break' outside of loop
module test_err

fn main() {
    break
}
